--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#text editor settings
+.gitignore
+.vscode/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+python-masss-mail/.vscode/settings.json
